2008-01-01  Djihed Afifi <djihedlists@googlemail.com>

	* src/gnome-cmd-main-win.cc:
	Made window title translatable

2007-12-29  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-advrename-dialog.cc:
	Fixed misplaced bracket in regex handling

2007-12-23  <rehsack@web.de>

	* src/gnome-cmd-python-plugin.cc:
	Fixed crash #468685

2007-12-13  Piotr Eljasiak  <epiotr@use.pl>

	* /src/gnome-cmd-data.cc:
	* /src/gnome-cmd-data.h:
	* /src/gnome-cmd-remote-dialog.cc:
	quick-connect working again

2007-12-12  Damien Carbery  <damien.carbery@sun.com>

	* src/libgviewer/fileops.c:
	Fix for problem #365227 (build for Solaris x86)

2007-12-10  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-advrename-dialog.cc:
	* src/gnome-cmd-con-dialog.cc:
	* src/gnome-cmd-file-selector.cc:
	* src/gnome-cmd-user-actions.cc:
	* src/libgviewer/search-dlg.cc:
	* src/libgviewer/viewer-window.cc:
	* src/tags/gnome-cmd-tags-doc.cc:
	* src/tags/gnome-cmd-tags-taglib.cc:
	Fix for problem #502756 (translations)

	* src/imageloader.cc:
	* src/utils.cc:
	* src/tags/gnome-cmd-tags-doc.cc:
	strncmp()==0 -> g_str_has_prefix()

2007-12-10  koos  <kjniesink@yahoo.co.uk>

	* src/gnome-cmd-remote-dialog.cc:
	* src/gnome-cmd-file-props-dialog.cc:
	Made dlg windows resize vertically

2007-12-06  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-con-ftp.cc:
	* src/gnome-cmd-con-ftp.h:
	* src/gnome-cmd-remote-dialog.cc:
	Removed excessive ftp code

2007-12-04  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-con.cc:
	* src/gnome-cmd-con.h:
	* src/gnome-cmd-con-dialog.cc:
	Added gnome_cmd_con_make_uri() function and ..._*_uri() derivatives

2007-11-30  Piotr Eljasiak  <epiotr@use.pl>

	* src/utils.h:
	Added uri_is_valid() function for URI verification

2007-11-29  koos  <kjniesink@yahoo.co.uk>

	* src/gnome-cmd-file.cc:
	Fixed problem #490431 (view files with name containing '%')

2007-11-26  koos  <kjniesink@yahoo.co.uk>

	* src/gnome-cmd-xfer.cc:
	Fix for crash when moving file with % in the name
